# Market-Radar-Creator

./: .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  Supabase game ss  (1).xlsx  Supabase theme.xlsx  docker-compose.yml  market_radar_sample_brief.json  pyproject.toml
.claude/: settings.json
app/: config.py  main.py  orchestrator.py  schemas.py
app/api/: drafts.py  edits.py  exports.py  projects.py  uploads.py  validate.py
app/cache/: __init__.py  game_asset_cache.py
app/models/: project.py
app/renderer/: engine.py  layout.py  text_fit.py
app/renderer/components/: header.py  inspirations.py  phone.py  title.py
app/resolvers/: base.py  combined.py  concept.py  dalle.py  iconify.py  itunes.py  playstore.py  supabase_theme.py  upload.py
app/utils/: text_brief_parser.py  validator.py
app/web/: routes.py
app/web/templates/: base.html  edit_draft.html  home.html  new_draft.html  new_project.html  project.html
config/: design_tokens.yaml
gilroy-font/: DownloadFonts.io.url
scripts/: calibrate.py  render_cli.py
tests/fixtures/briefs/: sample_2.json  sample_3.json  sample_4.json
