[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "market-radar-forge"
version = "0.1.0"
description = "Automated 1080x1080 Market Radar post generator for NextBigGames"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "pillow>=10.3.0",
    "httpx>=0.27.0",
    "google-play-scraper>=1.2.7",
    "duckduckgo-search>=6.0.0",
    "cairosvg>=2.7.0",
    "playwright>=1.40.0",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.1",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
